# websensors-science-metrics

./: .gitignore  LICENSE  README.md  Tutorial-PT-BR.md  mkdocs.yml  pyproject.toml
docs/: Tutorial-PT-BR.md  architecture.md  frontend_mapping.md  index.md
docs/api/: arcadedb_client.md  entity_resolution.md  index.md  ingest_data.md  institution_model.md  openalex_client.md  project_config.md  steps.md  utils.md
flows/science_metrics/: flow.example.yaml  flow.ppg-ccmc-tutorial.yaml  flow.yaml
flows/science_metrics/steps/: 01_ingest_data.yaml  02_preprocess_kg.yaml  03_resolve_identity.yaml  04_primary_institution.yaml  05_enrich_coauthors.yaml  06_reporting.yaml
frontend/demo-v1/: README.md  config.json  index.html
frontend/demo-v1/css/: styles.css
frontend/demo-v1/js/: app.js  charts.js  config.js  graph.js  metrics.js  openalex-api.js  store.js  world-countries.js
scripts/: install_arcadedb.sh  install_mlflow.sh  setup_local.sh  start_arcadedb.sh  start_docs.sh  start_mlflow.sh  stop_arcadedb.sh  stop_mlflow.sh  test_arcadedb.sh  test_mlflow.sh
src/projects/science_metrics/: __init__.py  arcadedb_client.py  cli.py  entity_resolution.py  ingest_data.py  institution_model.py  model_coauthors.py  model_identity.py  openalex_client.py  (+7 more)
src/websensors_flow/: __init__.py  api.py  cli.py  config.py  context.py  events.py  exceptions.py  logger.py  pipeline.py  report.py  result.py  runner.py  step.py
tests/: test_config.py  test_entity_resolution.py  test_institution_model.py  test_metrics.py
tools/clarivate/: Readme.md  clarivate_research_metrics.py
(+6 files in other folders)
